--- a/app/src/main/res/layout/seekbar.xml
+++ b/app/src/main/res/layout/seekbar.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="20dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+                <com.ravi.videotrimsample.widgets.CrystalSeekbar
                     android:id="@+id/rangeSeekbar1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -64,7 +64,7 @@
                 android:layout_marginTop="30dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.BubbleThumbSeekbar
+                <com.ravi.videotrimsample.widgets.BubbleThumbSeekbar
                     android:id="@+id/rangeSeekbar2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="30dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.BubbleThumbSeekbar
+                <com.ravi.videotrimsample.widgets.BubbleThumbSeekbar
                     android:id="@+id/rangeSeekbar3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+                <com.ravi.videotrimsample.widgets.CrystalSeekbar
                     android:id="@+id/rangeSeekbar4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -230,7 +230,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp">
 
-                <com.ravi.videotrimsample.crytal.widgets.MySeekbar
+                <com.ravi.videotrimsample.customseekar.MySeekbar
                     android:id="@+id/rangeSeekbar6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -267,7 +267,7 @@
                 android:layout_marginTop="20dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+                <com.ravi.videotrimsample.widgets.CrystalSeekbar
                     android:id="@+id/rangeSeekbar7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -305,7 +305,7 @@
                 android:layout_marginTop="20dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+                <com.ravi.videotrimsample.widgets.CrystalSeekbar
                     android:id="@+id/rangeSeekbar8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -350,7 +350,7 @@
                 android:layout_marginTop="20dp"
                 android:clipChildren="false">
 
-                <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+                <com.ravi.videotrimsample.widgets.CrystalSeekbar
                     android:id="@+id/rangeSeekbar9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
