--- a/app/src/main/res/layout/view_video_controller.xml
+++ b/app/src/main/res/layout/view_video_controller.xml
@@ -12,7 +12,7 @@
     android:gravity="bottom"
     tools:ignore="ContentDescription,UnusedAttribute">
 
-    <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalRangeSeekbar
+    <com.ravi.videotrimsample.widgets.CrystalRangeSeekbar
         android:id="@+id/range_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         app:right_thumb_image="@drawable/ic_max_seek"
         />
 
-    <com.ravi.videotrimsample.crystalrangeseekbar.widgets.CrystalSeekbar
+    <com.ravi.videotrimsample.widgets.CrystalSeekbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
