refractored seekbar images

--- a/app/src/main/res/layout/act_video_trimmer.xml
+++ b/app/src/main/res/layout/act_video_trimmer.xml
@@ -195,9 +195,11 @@
 
             <ImageView
                 android:id="@+id/image_five"
+                style="@style/ImageTrim"
+                android:layout_height="match_parent"
+
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                style="@style/ImageTrim" />
+                android:paddingBottom="10dp" />
 
             <ImageView
                 android:id="@+id/image_six"
