--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">55dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:scaleType">centerCrop</item>
+        <item name="android:scaleType">fitXY</item>
+
     </style>
 </resources>
