--- a/app/src/main/res/layout/activity_video_selection.xml
+++ b/app/src/main/res/layout/activity_video_selection.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".activity.MainActivity">
+    android:background="@color/black">
 
     <VideoView
         android:id="@+id/video_view"
