--- a/app/src/main/res/layout/act_video_trimmer.xml
+++ b/app/src/main/res/layout/act_video_trimmer.xml
@@ -7,7 +7,7 @@
     android:background="@color/black"
     tools:ignore="ContentDescription">
 
-    <com.google.android.exoplayer2.ui.StyledPlayerView
+    <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/player_view_lib"
         android:layout_width="0dp"
         android:layout_height="0dp"
